--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 <body>
 
 <div class="block">
-    <div class="bg-video">
-        <video src="assets/media/video.mp4" autoplay muted loop></video>
+    <div class="video-container">
+        <video src="assets/media/video.mp4" autoplay loop muted></video>
     </div>
     <div class="content">
-        <span class="text">We're here</span> <span class="hole-1"></span> <span class="text">to make</span> <br>  <span class="text">healthy</span> <span class="hole-2"></span>
-        <span class="text">living effortless,</span> <br> <span class="text">so you can</span> <span class="hole-3"></span> <span class="text">live longer</span>
-        <br> <span class="text">and happier</span> <span class="hole-4"></span>
+        <span class="text">We're here</span> <span class="hole"></span> <span class="br"></span> <span class="text">to</span> <span class="hole hole-mob"></span>
+        <span class="text">make</span> <span class="br"></span> <span class="hole hole-mob"></span> <span class="text">healthy </span> <span class="hole hole-pc"></span>
+        <span class="text">living</span> <span class="br"></span> <span class="text">effortless,</span> <span class="text">so you</span> <span class="text">can</span> <span class="hole"></span>
+        <span class="text">live longer</span> <span class="text">and happier</span> <span class="hole"></span>
     </div>
 </div>
 
